--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <body>
   <div class="container">
     <header>
-      <img src="https://evarubin.github.io/pasadena-100-city-council-district-lookup/pasadena100-logo.png" alt="Pasadena 100 logo">
+      <img src="https://via.placeholder.com/60x60?text=P100" alt="Pasadena 100 logo">
       <h1>Find Your Pasadena City Council District</h1>
     </header>
 
